# cmake-demos

./: .gitignore  CMakeLists.txt  demo.cpp
